Fixed labels in New User dialog
 * Fixed font colors as it defaulted to white making them invisible
 * Clearing username and password to avoid cached credentials

--- a/kano_greeter/media/css/kano-greeter.css
+++ b/kano_greeter/media/css/kano-greeter.css
@@ -1,3 +1,4 @@
 GtkLabel.login {
     font: Bariol Bold 13;
+    color: #6e6e6e;
 }
